--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "media-store-net/wp-rest-registration",
   "description": "A Simple Way to Register Rest Routes to WP",
+  "version": "1.0.1",
   "authors": [
     {
       "name": "Artur Voll",
@@ -9,5 +10,9 @@
   ],
   "require": {
     "php": "^5.6.37 || ^7.0"
-  }
+  },
+  "autoload": {
+    "psr-4": {"MediaStoreNet\\": "src/"}
+  },
+  "licence": "MIT"
 }
