--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "media-store-net/wp-rest-registration",
   "description": "A Simple Way to Register Rest Routes to WP",
-  "version": "1.0.1",
+  "homepage": "https://github.com/media-store-net/WpRestRegistration",
+  "version": "1.0.2",
   "authors": [
     {
       "name": "Artur Voll",
@@ -14,5 +15,5 @@
   "autoload": {
     "psr-4": {"MediaStoreNet\\": "src/"}
   },
-  "licence": "MIT"
+  "license": "MIT"
 }
