--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^5.6.37 || ^7.0"
   },
   "autoload": {
-    "psr-4": {"MediaStoreNet\\": "src/"}
+    "psr-4": {"MediaStoreNet\\WpRestRegistration\\": "src/"}
   },
   "license": "MIT"
 }
