--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "media-store-net/wp-rest-registration",
   "description": "A Simple Way to Register Rest Routes to WP",
   "homepage": "https://github.com/media-store-net/WpRestRegistration",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "prefer-stable": true,
   "authors": [
     {
       "name": "Artur Voll",
@@ -13,7 +14,9 @@
     "php": "^5.6.37 || ^7.0"
   },
   "autoload": {
-    "psr-4": {"MediaStoreNet\\WpRestRegistration\\": "src/"}
+    "psr-4": {
+      "MediaStoreNet\\WpRestRegistration\\": "src/"
+    }
   },
   "license": "MIT"
 }
